--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
 @import url(https://fonts.googleapis.com/earlyaccess/notosanstc.css);
-
+/* 變數設定 */
 $theme-color1: #aa0601;
 $theme-color2: #650300;
 $theme-color3: #fbf2f2;
